# agent-memory-benchmark

./: .blob_manifest.json  .gitignore  .vercelignore  CLAUDE.md  README.md  catalog.json  external_results.json  pyproject.toml  results-manifest.json  vercel.json
.claude/skills/open-memory-benchmark/: SKILL.md  ama-bench.md
api/: index.py  requirements.txt
outputs-mnemo-20260422-q10/lifebench/mnemo-openai-mini-q10/rag/: en.json
outputs-mnemo-20260422-q10/locomo/mnemo-openai-mini-q10/rag/: locomo10.json
outputs-mnemo-20260422-q10/longmemeval/mnemo-openai-mini-q10/rag/: s.json
outputs-mnemo-smoke/longmemeval/mnemo-smoke/rag/: s.json
scripts/: run_hindsight_longmemeval.sh  run_personamem_resume.sh  run_personamem_seq.sh  test_hindsight_extraction.py
src/memory_bench/: cli.py  judge.py  models.py  runner.py  server.py  utils.py
src/memory_bench/dataset/: __init__.py  _cache.py  ama_bench.py  base.py  lifebench.py  locomo.py  longmemeval.py  membench.py  memsim.py  personamem.py  tempo.py
src/memory_bench/llm/: __init__.py  base.py  gemini.py  groq.py  openai.py
src/memory_bench/memory/: __init__.py  base.py  bm25.py  cognee.py  hindsight.py  hybrid_search.py  mastra.py  mastra_om.py  mem0.py  mem0_cloud.py  mnemo.py  supermemory.py
src/memory_bench/modes/: __init__.py  agent.py  agentic_rag.py  ama_agent.py  base.py  rag.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: api.js  main.js  style.css  utils.js
ui/src/pages/: DatasetDetail.vue  DatasetList.vue  DocumentView.vue  QueryView.vue  RunDetail.vue  SplitDetail.vue
(+27 files in other folders)
