[project]
name = "amb"
version = "0.1.0"
description = "Agent Memory Benchmark"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.0",
    "typer>=0.12",
    "rich>=13",
    "rank-bm25>=0.2",
    "google-genai>=1.66.0",
    "mem0ai>=1.0.5",
    "cognee>=0.5.4",
    "sentence-transformers>=3.0",
    "python-dotenv>=1.0",
    "hindsight-all>=0.4",
    "supermemory>=0.1",
    "httpx>=0.27",
    "qdrant-client>=1.13",
    "fastapi[standard]>=0.135.1",
    "uvicorn>=0.41.0",
    "tiktoken>=0.12.0",
    "groq>=1.1.1",
]

[project.scripts]
amb = "memory_bench.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_bench"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
